--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,139 @@
-body {
+body{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(240, 240, 207);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header-container {
+  background-color: #7ed957;
+  padding: 10px;
+  text-align: center;
+  font-size: 15px;
+  color: white;
 }
+
+.header {
+
+  display: flex;
+  align-items: center;
+  justify-content: left;
+
+}
+
+
+.heading {
+  margin: 0;
+  font-size: 17px;
+}
+
+h1{
+  margin-left: 3px;
+  font-family: 'Barlow', sans-serif;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: lightgray;
+  padding: 10px;
+  text-align: center;
+}
+.main-note {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 16px;
+  margin: 16px auto;
+  width: 25%;
+  position: relative;
+
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+input, textarea {
+  border: none;
+  outline: none;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+textarea {
+  resize: none;
+  min-height: 80px;
+}
+
+.add-button {
+  position: absolute;
+  bottom: -15px;
+  right: 6px;
+  width: 35px;
+  background-color:white;
+  color: #7ed957 ;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 35px;
+}
+
+.btn-icon {
+  align-items: center;
+  margin-left: 2px;
+  text-align: center;
+}
+
+
+.add-button:hover {
+  background-color: #7ed957; 
+  color: white;
+}
+
+/* Note.css */
+
+.Note {
+  display: inline-block; /* Display notes in a row */
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  width: 300px; /* Set a fixed width for each note */
+}
+
+
+
+.deletebtn {
+  background-color:white;
+  border: none;
+  cursor: pointer;
+  display: flex;
+
+  align-items: right;
+  justify-content: right;
+  border-radius: 50%;
+  bottom: 15px;
+  right: 0px;
+
+}
+
+/* Styling for the button icon */
+.btnicon {
+  color: #7ed957 ;
+  font-size: 18px;  
+  
+}
+
+.btnicon:hover {
+  background-color: #7ed957; 
+  color: white;
+  border-radius: 50%;
+}
+
